push add for homer

--- a/public/views/sys-users/sys-users.html
+++ b/public/views/sys-users/sys-users.html
@@ -112,7 +112,7 @@
                     </thead>
                     <tbody ng-hide="mc.isLoading">
                     <tr ng-repeat="user in mc.displayed">
-                        <td cs-select="row"></td>
+                        <td cs-select="row" align="center"></td>
                         <td>
                             {{ user.email }}
                         </td>
