--- a/public/views/sys-users/sys-users.html
+++ b/public/views/sys-users/sys-users.html
@@ -123,7 +123,9 @@
                             {{user.password}}
                         </td>
                         <td class="center" >
-                            ...
+                            <select>
+                                <option>系统管理员</option>
+                            </select>
                         </td>
                         <td>
                             <a class="edit" ng-click="edituser(user.id)"  href="javascript:;">
