--- a/public/views/sys-users/sys-users.html
+++ b/public/views/sys-users/sys-users.html
@@ -69,7 +69,7 @@
                     <i class="fa fa-user"></i>用户管理
                 </div>
                 <div class="tools">
-                    <button class="btn btn-default yellow">
+                    <button class="btn btn-default yellow" onclick="window.location.href='#/sys-usersedit.html'">
                         <i class="fa fa-plus"></i> &nbsp;添加 </button>
                     <a href="javascript:;" class="reload">
                     </a>
