push add for homer

--- a/public/views/sys-users/sys-usersedit.html
+++ b/public/views/sys-users/sys-usersedit.html
@@ -19,18 +19,18 @@
                     <form role="form" class="form-horizontal">
                         <div class="form-body">
                             <div class="form-group form-md-line-input">
-                                <label class="col-md-2 control-label" for="form_control_1">input属性名</label>
+                                <label class="col-md-2 control-label">input属性名</label>
                                 <div class="col-md-10">
-                                    <input type="text" class="form-control" id="form_control_1" placeholder="提示信息">
+                                    <input type="text" class="form-control" placeholder="提示信息">
                                     <div class="form-control-focus">
                                     </div>
                                     <span class="help-block">只能输入文字或者字符，最长不超过xx;只能输入文字或者字符，最长不超过xx;</span>
                                 </div>
                             </div>
                             <div class="form-group form-md-line-input">
-                                <label class="col-md-2 control-label" for="form_control_1">select属性名</label>
+                                <label class="col-md-2 control-label">select属性名</label>
                                 <div class="col-md-10">
-                                    <select class="form-control" id="form_control_1">
+                                    <select id="dcMultiselect1" class="form-control select2">
                                         <option value=""></option>
                                         <option value="">Option 1</option>
                                         <option value="">Option 2</option>
@@ -43,7 +43,18 @@
                                 </div>
                             </div>
                             <div class="form-group form-md-line-input">
-                                <label class="col-md-2 control-label" for="form_control_1">Textarea属性名</label>
+                                <label class="col-md-2 control-label">select2属性名</label>
+                                <div class="col-md-10">
+                                    <select id="dcMultiselect2" class="form-control select2" multiple>
+                                        <option>Denver Broncos</option>
+                                        <option>Kansas City Chiefs</option>
+                                        <option>Oakland Raiders</option>
+                                        <option>San Diego Chargers</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group form-md-line-input">
+                                <label class="col-md-2 control-label">Textarea属性名</label>
                                 <div class="col-md-10">
                                     <textarea class="form-control" rows="3" placeholder="Enter more text"></textarea>
                                     <div class="form-control-focus">
@@ -52,17 +63,17 @@
                                 </div>
                             </div>
                             <div class="form-group form-md-line-input">
-                                <label class="col-md-2 control-label" for="form_control_1">Disabled属性</label>
+                                <label class="col-md-2 control-label">Disabled属性</label>
                                 <div class="col-md-10">
-                                    <input type="text" class="form-control" disabled id="form_control_1" placeholder="Placeholder...">
+                                    <input type="text" class="form-control" disabled placeholder="Placeholder...">
                                     <div class="form-control-focus">
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group form-md-line-input">
-                                <label class="col-md-2 control-label" for="form_control_1">Readonly属性</label>
+                                <label class="col-md-2 control-label">Readonly属性</label>
                                 <div class="col-md-10">
-                                    <input type="text" class="form-control" readonly value="Some value" id="form_control_1" placeholder="Placeholder...">
+                                    <input type="text" class="form-control" readonly value="Some value" placeholder="Placeholder...">
                                     <div class="form-control-focus">
                                     </div>
                                 </div>
