--- a/public/views/sys-users/sys-users.html
+++ b/public/views/sys-users/sys-users.html
@@ -123,7 +123,7 @@
                             {{user.password}}
                         </td>
                         <td>
-                            <select class="styled-select">
+                            <select class="form-control">
                                 <option value="系统管理员">系统管理员</option>
                                 <option value="营销主管">营销主管</option>
                                 <option value="行政主管">行政主管</option>
