push add for homer

--- a/public/views/sys-users/sys-usersedit.html
+++ b/public/views/sys-users/sys-usersedit.html
@@ -181,7 +181,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="form-group form">
+                            <div class="form-group">
                                 <label class="control-label col-md-2">Editor插件</label>
                                 <div class="col-md-10">
                                     <div name="dc_editor" id="dc_editor">
@@ -191,10 +191,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="form-group form">
+                            <div class="form-group">
                                 <label class="control-label col-md-2">markdown插件</label>
                                 <div class="col-md-10">
-                                    <textarea name="content" data-provide="markdown" rows="10"></textarea>
+                                    <textarea id="id="dcwysihtml5"" class="wysihtml5 form-control" rows="6"></textarea>
                                     <div class="form-control-focus">
                                         <hr>
                                     </div>
