push add for homer

--- a/public/views/sys-users/sys-usersedit.html
+++ b/public/views/sys-users/sys-usersedit.html
@@ -194,7 +194,9 @@
                             <div class="form-group">
                                 <label class="control-label col-md-2">markdown插件</label>
                                 <div class="col-md-10">
-                                    <textarea id="id="dcwysihtml5"" class="wysihtml5 form-control" rows="6"></textarea>
+                                    <script type="text/plain" id="editor" name="myEditor">
+                                            <p>请在此输入内容！</p>
+                                        </script>
                                     <div class="form-control-focus">
                                         <hr>
                                     </div>
