push add for homer

--- a/public/views/sys-users/sys-usersedit.html
+++ b/public/views/sys-users/sys-usersedit.html
@@ -145,7 +145,7 @@
                             <div class="form-group form-md-line-input">
                                 <label class="col-md-2 control-label">Date选择</label>
                                 <div class="col-md-10">
-                                    <div class="input-group date date-picker" data-date-format="yyyy-mm-dd" data-date-start-date="+0d">
+                                    <div class="input-group date date-picker" data-date-format="yyyy-mm-dd">
                                         <input type="text" class="form-control">
 												<span class="input-group-btn">
 												<button class="btn default" type="button"><i class="fa fa-calendar"></i></button>
