push add for homer

--- a/public/views/sys-users/sys-usersedit.html
+++ b/public/views/sys-users/sys-usersedit.html
@@ -145,38 +145,32 @@
                             <div class="form-group form-md-line-input">
                                 <label class="col-md-2 control-label">Date选择</label>
                                 <div class="col-md-10">
-                                    <div class="input-group date date-picker" data-date-format="yyyy-mm-dd">
-                                        <input type="text" class="form-control">
-												<span class="input-group-btn">
-												<button class="btn default" type="button"><i class="fa fa-calendar"></i></button>
-												</span>
-                                    </div>
+                                        <input class="form-control data date-picker" data-date-format="yyyy-mm-dd" type="text" value=""/>
                                     <div class="form-control-focus">
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group form-md-line-input">
-                                <label class="control-label col-md-2">Datetime选择</label>
+                                <label class="col-md-2 control-label">Datetime选择</label>
                                 <div class="col-md-10">
-                                    <div class="input-group date form_datetime" data-date-format="yyyy-mm-dd">
-                                        <input type="text" class="form-control">
-												<span class="input-group-btn">
-												<button class="btn default date-set" type="button"><i class="fa fa-calendar"></i></button>
-												</span>
-                                    </div>
+                                    <input class="form-control data form_datetime" data-date-format="yyyy-mm-dd" type="text" value=""/>
                                     <div class="form-control-focus">
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group form-md-line-input">
-                                <label class="control-label col-md-2">Date区间</label>
+                                <label class="col-md-2 control-label">Date区间</label>
                                 <div class="col-md-10">
-                                    <div class="input-group date-picker input-daterange" data-date-format="yyyy-mm-dd">
-                                        <input type="text" class="form-control" name="from" style="text-align:left; vertical-align:middle">
-												<span class="input-group-addon">
-												to </span>
-                                        <input type="text" class="form-control" name="to" style="text-align:left; vertical-align:middle">
-                                    </div>
+                                        <div class="input-group date-picker input-daterange" data-date-format="yyyy-mm-dd">
+                                            <input type="text" class="form-control" name="from" style="text-align:left; vertical-align:middle">
+                                            <div class="form-control-focus">
+                                            </div>
+                                                    <span class="input-group-addon">
+                                                    to </span>
+                                            <input type="text" class="form-control" name="to" style="text-align:left; vertical-align:middle">
+                                            <div class="form-control-focus">
+                                            </div>
+                                        </div>
                                     <div class="form-control-focus">
                                     </div>
                                 </div>
